--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "openpaint",
   "version": "1.0.0",
-  "description": "A simple web-based paint application with image copy-paste functionality",
+  "description": "A web-based drawing and annotation tool designed for email communication of measurements and specifications",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "express": "^4.18.2",
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "task-master-ai": "^0.13.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.49.0"
   }
 }
