--- a/package.json
+++ b/package.json
@@ -6,7 +6,17 @@
   "scripts": {
     "start": "node app.js",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "test": "npm run test:unit && npm run test:integration",
+    "test:unit": "jest --testMatch='**/tests/unit/**/*.test.js'",
+    "test:integration": "jest --testMatch='**/tests/integration/**/*.test.js'",
+    "test:e2e": "cypress run",
+    "test:e2e:open": "cypress open",
+    "test:visual": "jest --testMatch='**/tests/visual/**/*.test.js'",
+    "test:performance": "jest --testMatch='**/tests/performance/**/*.test.js' --runInBand",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:all": "npm run test && npm run test:e2e && npm run test:visual && npm run test:performance"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -16,6 +26,13 @@
     "task-master-ai": "^0.13.2"
   },
   "devDependencies": {
-    "eslint": "^8.49.0"
+    "@testing-library/dom": "^10.4.1",
+    "@types/jest": "^30.0.0",
+    "cypress": "^14.5.3",
+    "eslint": "^8.49.0",
+    "jest": "^29.7.0",
+    "jest-canvas-mock": "^2.5.2",
+    "jest-environment-jsdom": "^30.0.5",
+    "jest-image-snapshot": "^6.5.1"
   }
 }
