Some copy paste fixes

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
-# API Keys (Required to enable respective provider)
-ANTHROPIC_API_KEY=your_anthropic_api_key_here       # Required: Format: sk-ant-api03-...
-PERPLEXITY_API_KEY=your_perplexity_api_key_here     # Optional: Format: pplx-...
-OPENAI_API_KEY=your_openai_api_key_here             # Optional, for OpenAI/OpenRouter models. Format: sk-proj-...
-GOOGLE_API_KEY=your_google_api_key_here             # Optional, for Google Gemini models.
-MISTRAL_API_KEY=your_mistral_key_here               # Optional, for Mistral AI models.
-XAI_API_KEY=YOUR_XAI_KEY_HERE                       # Optional, for xAI AI models.
-AZURE_OPENAI_API_KEY=your_azure_key_here            # Optional, for Azure OpenAI models (requires endpoint in .taskmasterconfig).
+HF_TOKEN=hf_xxx_your_token_here
+HF_SPACE_URL=https://kenjiedec-rembg.hf.space
+PORT=8787
+HF_FN_INDEX=
+
+# Notes:
+# - HF_TOKEN is optional for public Spaces, but recommended to avoid rate limits.
+# - HF_SPACE_URL should point to the RemBG Space you want to use.
+# - PORT is the local port for the proxy server.
+# - HF_FN_INDEX (optional) forces a specific Gradio fn_index if auto-discovery fails.
