--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "dotenv": "^16.4.5",
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
     "multer": "^1.4.5-lts.1",
