chore(vercel): configure Vite+Bun build

--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,5 @@
 {
-  "outputDirectory": "."
+  "buildCommand": "bun install && bunx vite build",
+  "installCommand": "bun install",
+  "outputDirectory": "dist"
 }
