--- a/package.json
+++ b/package.json
@@ -26,21 +26,23 @@
     "test:all": "npm run test && npm run test:e2e && npm run test:visual && npm run test:performance"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "file-saver": "^2.0.5",
-    "jszip": "^3.10.1",
-    "multer": "^1.4.5-lts.1",
+    "22": "^0.0.0",
     "@vercel/postgres": "^0.8.0",
+    "express": "^4.21.2",
+    "file-saver": "^2.0.5",
+    "jsondiffpatch": "^0.7.3",
+    "jszip": "^3.10.1",
+    "multer": "^1.4.5-lts.2",
     "task-master-ai": "^0.13.2"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.1",
     "@types/jest": "^30.0.0",
-    "cypress": "^14.5.3",
-    "eslint": "^8.49.0",
+    "cypress": "^14.5.4",
+    "eslint": "^8.57.1",
     "jest": "^29.7.0",
     "jest-canvas-mock": "^2.5.2",
-    "jest-environment-jsdom": "^30.0.5",
+    "jest-environment-jsdom": "^30.2.0",
     "jest-image-snapshot": "^6.5.1"
   }
 }
