--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "jsondiffpatch": "^0.7.3",
     "jszip": "^3.10.1",
     "multer": "^1.4.5-lts.2",
-    "task-master-ai": "^0.13.2"
+    "task-master-ai": "^0.13.2",
+    "vercel": "^48.4.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.1",
