--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,11 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "app.js",
-      "use": "@vercel/node"
+  "functions": {
+    "app.js": {
+      "runtime": "@vercel/node"
     }
-  ],
-  "routes": [
-    {
-      "src": "^/ai/(.*)$",
-      "dest": "/app.js"
-    },
-    {
-      "src": "^/health$",
-      "dest": "/app.js"
-    },
-    {
-      "src": ".*",
-      "dest": "/index.html"
-    }
+  },
+  "rewrites": [
+    { "source": "/ai/(.*)", "destination": "/app.js" },
+    { "source": "/health", "destination": "/app.js" }
   ]
 }
