Add outputDirectory to vercel.json for static file serving

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "outputDirectory": ".",
   "rewrites": [
     { "source": "/ai/(.*)", "destination": "/api/app" },
     { "source": "/health", "destination": "/api/app" }
