Add minimal test endpoint to diagnose Express startup issues

--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,10 @@
     {
       "source": "/env-check",
       "destination": "/api/app"
+    },
+    {
+      "source": "/test",
+      "destination": "/api/app"
     }
   ]
 }
