--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "start": "node app.js",
     "dev": "node app.js",
     "build": "echo 'Static assets ready for deployment'",
+    "build:css": "npx --yes @tailwindcss/cli -i \"./css/tailwind.css\" -o \"./css/tailwind.build.css\" --minify",
+    "vercel-build": "npm run build:css",
     "deploy": "vercel --prod",
     "deploy:preview": "vercel",
     "lint": "eslint .",
@@ -38,11 +40,14 @@
   "devDependencies": {
     "@testing-library/dom": "^10.4.1",
     "@types/jest": "^30.0.0",
+    "autoprefixer": "^10.4.21",
     "cypress": "^14.5.4",
     "eslint": "^8.57.1",
     "jest": "^29.7.0",
     "jest-canvas-mock": "^2.5.2",
     "jest-environment-jsdom": "^30.2.0",
-    "jest-image-snapshot": "^6.5.1"
+    "jest-image-snapshot": "^6.5.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.16"
   }
 }
