--- a/vercel.json
+++ b/vercel.json
@@ -41,7 +41,7 @@
     },
     {
       "src": "^/js/(.*)$",
-      "dest": "/public/js/$1"
+      "dest": "/js/$1"
     },
     {
       "src": "^/css/(.*)$",
