--- a/wrangler.draw-bot.toml
+++ b/wrangler.draw-bot.toml
@@ -1,15 +1,10 @@
-name = "promote-feedback"
+name = "draw-bot"
 account_id = "665aca072a7cddbc216be6b25a6fd951"
-main = "workers/promote-feedback.js"
+main = "workers/draw-bot.js"
 compatibility_date = "2024-01-01"
 
-# KV Namespaces for storing feedback and stroke data
 [[kv_namespaces]]
 binding = "SOFA_TAGS"
 id = "4732a4548a064b9b90e2f41eda556fc6"
 preview_id = "82e4b9df98264eac84a823ec541334ac"
-
-# Cron trigger for promotion job (runs daily at 2 AM UTC)
-[triggers]
-crons = ["0 2 * * *"]
 
