--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,5 @@
 name = "sofa-classify"
+account_id = "665aca072a7cddbc216be6b25a6fd951"
 main = "workers/sofa-classify.js"
 compatibility_date = "2024-01-01"
 
