--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.84.0",
+    "@tailwindcss/postcss": "^4.1.17",
     "@vercel/postgres": "^0.8.0",
     "debug": "^4.4.3",
     "express": "^4.21.2",
