--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,5 @@
 {
   "src/**/*.{ts,tsx}": ["prettier --write"],
-  "*.{ts,js}": ["prettier --write"],
-  "*.{json}": ["prettier --write"]
+  "!(node_modules/**)*.{ts,js}": ["prettier --write"],
+  "!(node_modules/**)*.json": ["prettier --write"]
 }
