--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "openpaint",
   "version": "2.0.0",
+  "packageManager": "bun@1.1.42",
   "type": "module",
   "description": "A web-based drawing and annotation tool designed for email communication of measurements and specifications",
   "main": "app.js",
