--- a/package.json
+++ b/package.json
@@ -30,13 +30,7 @@
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
-    "test:legacy": "npm run test:unit && npm run test:integration",
-    "test:unit": "jest --testMatch='**/tests/unit/**/*.test.js'",
-    "test:integration": "jest --testMatch='**/tests/integration/**/*.test.js'",
-    "test:e2e": "cypress run",
-    "test:e2e:open": "cypress open",
-    "test:visual": "jest --testMatch='**/tests/visual/**/*.test.js'",
-    "test:performance": "jest --testMatch='**/tests/performance/**/*.test.js' --runInBand",
+    "test:visual": "vitest run tests/visual",
     "validate": "npm run type-check && npm run lint && npm run test",
     "validate:full": "npm run type-check && npm run lint && npm run test:coverage",
     "db:generate-types": "supabase gen types typescript --linked > src/types/database.types.ts",
@@ -56,39 +50,29 @@
     "debug": "^4.4.3",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
-    "file-saver": "^2.0.5",
-    "jsondiffpatch": "^0.7.3",
     "jszip": "^3.10.1",
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.2",
-    "open-code": "^0.0.1",
-    "pg": "^8.16.3",
-    "task-master-ai": "^0.13.2",
-    "vercel": "^48.4.0"
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "@parcel/watcher": "^2.5.1",
-    "@supabase/auth-helpers-shared": "^0.7.0",
     "@tailwindcss/cli": "^4.1.17",
-    "@testing-library/dom": "^10.4.1",
-    "@types/jest": "^30.0.0",
     "@types/node": "^24.10.1",
     "@typescript-eslint/eslint-plugin": "^8.48.0",
     "@typescript-eslint/parser": "^8.48.0",
     "@vitest/coverage-v8": "^4.0.13",
     "@vitest/ui": "^4.0.13",
     "autoprefixer": "^10.4.21",
-    "cypress": "^14.5.4",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.8",
     "globals": "^16.5.0",
     "husky": "^9.1.7",
-    "jest": "^29.7.0",
-    "jest-canvas-mock": "^2.5.2",
-    "jest-environment-jsdom": "^30.2.0",
-    "jest-image-snapshot": "^6.5.1",
     "jsdom": "^27.2.0",
     "lint-staged": "^16.2.7",
+    "pixelmatch": "^5.3.0",
+    "playwright": "^1.55.0",
+    "pngjs": "^7.0.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "supabase": "^2.61.2",
@@ -96,6 +80,7 @@
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.48.0",
     "vite": "^7.2.4",
+    "vercel": "^48.4.0",
     "vite-plugin-checker": "^0.11.0",
     "vitest": "^4.0.13"
   },
