--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "A web-based drawing and annotation tool designed for email communication of measurements and specifications",
   "main": "app.js",
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=20 <24"
   },
   "scripts": {
     "start": "node app.js",
