--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "jszip": "^3.10.1",
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.2",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@parcel/watcher": "^2.5.1",
@@ -64,6 +65,7 @@
     "@vitest/coverage-v8": "^4.0.13",
     "@vitest/ui": "^4.0.13",
     "autoprefixer": "^10.4.21",
+    "baseline-browser-mapping": "^2.9.14",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.8",
     "globals": "^16.5.0",
@@ -77,10 +79,11 @@
     "prettier": "^3.6.2",
     "supabase": "^2.61.2",
     "tailwindcss": "^4.1.16",
+    "terser": "^5.44.1",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.48.0",
-    "vite": "^7.2.4",
     "vercel": "^48.4.0",
+    "vite": "^7.2.4",
     "vite-plugin-checker": "^0.11.0",
     "vitest": "^4.0.13"
   },
