--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.84.0",
     "@tailwindcss/postcss": "^4.1.17",
-    "@vercel/postgres": "^0.8.0",
+    "@vercel/postgres": "^0.10.0",
     "debug": "^4.4.3",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
@@ -54,7 +54,8 @@
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.2",
     "pg": "^8.16.3",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@parcel/watcher": "^2.5.1",
@@ -65,7 +66,7 @@
     "@vitest/coverage-v8": "^4.0.13",
     "@vitest/ui": "^4.0.13",
     "autoprefixer": "^10.4.21",
-    "baseline-browser-mapping": "^2.9.14",
+    "baseline-browser-mapping": "^2.9.18",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.8",
     "globals": "^16.5.0",
@@ -81,7 +82,7 @@
     "terser": "^5.44.1",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.48.0",
-    "vercel": "^48.4.0",
+    "vercel": "^32.3.0",
     "vite": "^7.2.4",
     "vite-plugin-checker": "^0.11.0",
     "vitest": "^4.0.13"
