--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
   "version": 2,
   "installCommand": "npm install --ignore-scripts",
+  "buildCommand": "npm run vercel-build",
+  "outputDirectory": ".",
   "functions": {
     "api/**/*.js": {
       "includeFiles": "server/**"
