--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "dev:server": "node app.js",
     "dev:legacy": "node app.js",
     "build": "tsc -b && vite build",
-    "build:css": "npx --yes @tailwindcss/cli -i \"./css/tailwind.input.css\" -o \"./css/tailwind.build.css\" --minify",
+    "build:css": "node scripts/ensure-public-css.js && npx --yes @tailwindcss/cli -i \"./css/tailwind.input.css\" -o \"./public/css/tailwind.build.css\" --minify",
     "preview": "vite preview",
-    "vercel-build": "npm run build:css",
+    "vercel-build": "npm run build:css && node scripts/prepare-vercel-static.js",
     "deploy": "vercel --prod",
     "deploy:preview": "vercel",
     "type-check": "tsc --noEmit",
