--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "tsc -b && vite build",
     "build:css": "node scripts/ensure-public-css.js && npx --yes @tailwindcss/cli -i \"./css/tailwind.input.css\" -o \"./public/css/tailwind.build.css\" --minify",
     "preview": "vite preview",
-    "vercel-build": "npm run build:css && node scripts/prepare-vercel-static.js",
+    "vercel-build": "npm run build:css && vite build",
     "deploy": "vercel --prod",
     "deploy:preview": "vercel",
     "type-check": "tsc --noEmit",
@@ -50,9 +50,11 @@
     "debug": "^4.4.3",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
+    "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.2",
+    "pdf-lib": "^1.17.1",
     "pg": "^8.16.3",
     "zod": "^3.25.76",
     "zustand": "^5.0.10"
@@ -83,7 +85,7 @@
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.48.0",
     "vercel": "^32.3.0",
-    "vite": "^7.2.4",
+    "vite": "^6.4.1",
     "vite-plugin-checker": "^0.11.0",
     "vitest": "^4.0.13"
   },
