--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
 {
-  "version": 2,
   "installCommand": "npm install --ignore-scripts",
   "buildCommand": "npm run vercel-build",
-  "outputDirectory": "public",
+  "outputDirectory": "dist",
   "functions": {
-    "api/**/*.js": {
+    "api/[...all].js": {
       "includeFiles": "server/**"
     }
   }
