--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "debug": "^4.4.3",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
+    "fabric": "^5.3.0",
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
     "ms": "^2.1.3",
@@ -62,6 +63,7 @@
   "devDependencies": {
     "@parcel/watcher": "^2.5.1",
     "@tailwindcss/cli": "^4.1.17",
+    "@types/fabric": "^5.3.11",
     "@types/node": "^24.10.1",
     "@typescript-eslint/eslint-plugin": "^8.48.0",
     "@typescript-eslint/parser": "^8.48.0",
