--- a/package.json
+++ b/package.json
@@ -74,8 +74,8 @@
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.8",
     "globals": "^16.5.0",
+    "happy-dom": "^17.6.1",
     "husky": "^9.1.7",
-    "jsdom": "^27.2.0",
     "lint-staged": "^16.2.7",
     "pixelmatch": "^5.3.0",
     "playwright": "^1.55.0",
