--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "db:reset": "supabase db reset",
     "db:seed": "supabase db seed",
     "db:diff": "supabase db diff",
+    "postinstall": "patch-package",
     "prepare": "husky",
     "precommit": "lint-staged",
     "clean": "rm -rf dist node_modules/.vite coverage",
@@ -77,6 +78,7 @@
     "happy-dom": "^17.6.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
+    "patch-package": "^8.0.1",
     "pixelmatch": "^5.3.0",
     "playwright": "^1.55.0",
     "pngjs": "^7.0.0",
