--- a/package.json
+++ b/package.json
@@ -57,10 +57,10 @@
     "jszip": "^3.10.1",
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.2",
+    "pako": "^2.1.0",
     "pdf-lib": "^1.17.1",
     "pg": "^8.16.3",
-    "zod": "^3.25.76",
-    "zustand": "^5.0.10"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@parcel/watcher": "^2.5.1",
