--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "nuke": "rm -rf node_modules dist coverage .husky/_"
   },
   "dependencies": {
+    "@sparticuz/chromium": "^138.0.2",
     "@supabase/supabase-js": "^2.84.0",
     "@tailwindcss/postcss": "^4.1.17",
     "@vercel/postgres": "^0.10.0",
@@ -60,6 +61,7 @@
     "pako": "^2.1.0",
     "pdf-lib": "^1.17.1",
     "pg": "^8.16.3",
+    "puppeteer-core": "^24.22.3",
     "zod": "^3.25.76"
   },
   "devDependencies": {
