--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,9 @@
   "buildCommand": "npm run vercel-build",
   "outputDirectory": "dist",
   "functions": {
+    "api/pdf/render.js": {
+      "includeFiles": "server/**"
+    },
     "api/[...all].js": {
       "includeFiles": "server/**"
     }
