fix: harden Playwright visual test setup

--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
-    "test:visual": "playwright test",
-    "test:visual:update": "playwright test --update-snapshots",
+    "test:visual": "node scripts/run-visual-tests.mjs",
+    "test:visual:update": "node scripts/run-visual-tests.mjs --update-snapshots",
+    "test:visual:setup": "playwright install --with-deps chromium",
     "validate": "npm run type-check && npm run lint && npm run test",
     "validate:full": "npm run type-check && npm run lint && npm run test:coverage",
     "db:generate-types": "supabase gen types typescript --linked > src/types/database.types.ts",
