--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,9 @@
   "functions": {
     "api/[...all].js": {
       "includeFiles": "server/**"
+    },
+    "api/measurement-guides/svg.js": {
+      "includeFiles": "server/**"
     }
   }
 }
