updates to drawing

--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "scripts": {
     "start": "node app.js",
     "dev": "vite --host",
+    "dev:safe": "VITE_SAFE_DEV=1 vite --host",
     "dev:server": "node app.js",
     "dev:legacy": "node app.js",
     "build": "tsc -b && vite build",
     "build:css": "node scripts/ensure-public-css.js && npx --yes @tailwindcss/cli -i \"./css/tailwind.input.css\" -o \"./public/css/tailwind.build.css\" --minify",
     "preview": "vite preview",
-    "vercel-build": "npm run build:css && vite build",
+    "build:vercel": "npm run build:css && vite build",
     "deploy": "vercel --prod",
     "deploy:preview": "vercel",
     "type-check": "tsc --noEmit",
@@ -89,6 +90,7 @@
     "pngjs": "^7.0.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "rollup": "npm:@rollup/wasm-node@^4.57.1",
     "tailwindcss": "^4.1.16",
     "terser": "^5.44.1",
     "typescript": "^5.9.3",
