--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,28 @@
 {
   "installCommand": "npm install --ignore-scripts",
-  "buildCommand": "npm run vercel-build",
+  "buildCommand": "npm run build:vercel",
   "outputDirectory": "dist",
   "functions": {
     "api/[...all].js": {
       "includeFiles": "server/**"
+    },
+    "api/integrations/cw/health.js": {
+      "includeFiles": "api/integrations/cw/**"
+    },
+    "api/integrations/cw/test-save/[formId].js": {
+      "includeFiles": "api/integrations/cw/**"
+    },
+    "api/integrations/cw/measurements/[formId].js": {
+      "includeFiles": "api/integrations/cw/**"
+    },
+    "api/integrations/cw/images/[formId].js": {
+      "includeFiles": "api/integrations/cw/**"
+    },
+    "api/integrations/cw/images/[formId]/upload.js": {
+      "includeFiles": "api/integrations/cw/**"
+    },
+    "api/integrations/cw/images/[formId]/delete.js": {
+      "includeFiles": "api/integrations/cw/**"
     },
     "api/measurement-guides/svg.js": {
       "includeFiles": "server/**"
