Fix projects table schema to match expected structure
- Renamed user_id -> created_by
- Renamed name -> project_name
- Added customer_name and sofa_model columns
- Removed is_public, version, description, thumbnail_url
- Updated all RLS policies to use created_by
- Updated TypeScript types for projects table
- Updated all service files to use new schema
- Added op-cli helper script for quick commands
- Added OpenPaint skill documentation

Migration: 20260217164400_fix_projects_schema.sql

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "scripts": {
     "start": "node app.js",
+    "op": "node scripts/op-cli.mjs",
     "dev": "vite --host",
     "dev:all": "node scripts/dev-all-safe.mjs",
     "dev:all:raw": "concurrently -k \"npm:dev:server\" \"npm:dev\"",
