--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "rollup": "npm:@rollup/wasm-node@^4.57.1",
+    "supabase": "^2.76.9",
     "tailwindcss": "^4.1.16",
     "terser": "^5.44.1",
     "typescript": "^5.9.3",
