feat: add Gemini-powered MOS overlay generation flow

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,7 @@ VITE_ENABLE_AUTH=false
 # Development flags
 VITE_DEV_MODE=true
 VITE_TYPESCRIPT_MIGRATION=true
+
+# Gemini API (for MOS overlay generation)
+GEMINI_API_KEY=your-gemini-api-key-here
+GEMINI_MODEL=gemini-2.0-flash
