--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "pdf-lib": "^1.17.1",
     "pg": "^8.16.3",
     "puppeteer-core": "^24.22.3",
+    "sharp": "^0.34.5",
     "zod": "^3.25.76"
   },
   "devDependencies": {
