--- a/vercel.json
+++ b/vercel.json
@@ -44,6 +44,10 @@
     },
     "api/storage/r2/object.js": {
       "includeFiles": "server/**"
+    },
+    "api/measurements/generate.js": {
+      "includeFiles": "server/**",
+      "maxDuration": 60
     }
   }
 }
